--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,16 @@
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "-ra -q"
+testpaths = [
+    "tests",
+]
+
+[tool.coverage]
+run.branch = true
+run.source = ["c3g_project_tracking"]
 
 [project]
 name = "c3g_project_tracking"
@@ -22,7 +32,16 @@ dependencies = [
     "flask>=2.2.2",
     "sqlalchemy>=1.4.42",
     "gunicorn>=20.1.0",
+    "psycopg2-binary",
 ]
+
 [project.urls]
 "Homepage" = "https://github.com/C3G/c3g_project_tracking"
 "Bug Tracker" = "https://github.com/pypa/c3g_project_tracking/issues"
+
+[project.optional-dependencies]
+tests = [
+  'pytest',
+  'coverage'
+]
+
