--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,10 @@ testpaths = [
 
 [tool.coverage]
 run.branch = true
-run.source = ["project_tracking"]
+run.source = ["c3g_project_tracking"]
 
 [project]
-name = "project_tracking"
+name = "c3g_project_tracking"
 version = "0.0.1"
 authors = [
   { name="P-O Quirion", email="po.quirion@mcgill.ca" },
@@ -30,14 +30,14 @@ classifiers = [
 ]
 dependencies = [
     "flask>=2.2.2",
-    "sqlalchemy>=2.0.b3",
+    "sqlalchemy>=2.0.0b3",
     "gunicorn>=20.1.0",
     "psycopg2-binary",
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/C3G/c3g_project_tracking"
-"Bug Tracker" = "https://github.com/pypa/c3g_project_tracking/issues"
+"Homepage" = "https://github.com/C3G/project_tracking"
+"Bug Tracker" = "https://github.com/pypa/project_tracking/issues"
 
 [project.optional-dependencies]
 tests = [
