--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,14 +30,14 @@ classifiers = [
 ]
 dependencies = [
     "flask>=2.2.2",
-    "sqlalchemy>=2.0.b3",
+    "sqlalchemy>=2.0.0b3",
     "gunicorn>=20.1.0",
     "psycopg2-binary",
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/C3G/c3g_project_tracking"
-"Bug Tracker" = "https://github.com/pypa/c3g_project_tracking/issues"
+"Homepage" = "https://github.com/C3G/project_tracking"
+"Bug Tracker" = "https://github.com/pypa/project_tracking/issues"
 
 [project.optional-dependencies]
 tests = [
