add options to flush db and to not install postgres

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,6 @@ dependencies = [
     "flask>=2.2.2",
     "sqlalchemy>=2.0.0b3",
     "gunicorn>=20.1.0",
-    "psycopg2-binary",
 ]
 
 [project.urls]
@@ -41,7 +40,9 @@ dependencies = [
 
 [project.optional-dependencies]
 tests = [
-  'pytest',
-  'coverage'
+  "pytest",
+  "coverage",
 ]
-
+postgres = [
+  "psycopg2-binary",
+]
