--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "flask>=2.2.2",
     "sqlalchemy>=2.0.0b3",
     "gunicorn>=20.1.0",
+    "sqlalchemy-json>=0.5.0"
 ]
 
 [project.urls]
