--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: ["3.10.7","3.10.8"]
+        python-version: ["3.10.8"]
         os: [ubuntu-latest, macos-latest]
 
     steps:
