--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -11,9 +11,17 @@ on:
       - 'main'
       - 'dev'
 
-jobs:
-  build:
+    tags:
+      - '[0-9]+.[0-9]+.[0-9]+'
 
+env:
+  REGISTRY_USER: c3genomics+github_pusher
+  IMAGE_REGISTRY: quay.io
+  REGISTRY_PASSWORD: ${{ secrets.QUAY_ROBOT_TOKEN }}
+  IMAGE: c3genomics/project_tracking
+
+jobs:
+  test:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -41,3 +49,29 @@ jobs:
       - name: Test with pytest
         run: |
           pytest -v
+  build:
+    needs: test
+    if: startsWith(github.ref, 'refs/tags')
+    name: Build image
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: set tag
+      run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+    - name: Buildah Action
+      uses: redhat-actions/buildah-build@v2
+      with:
+        image: ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE }}
+        tags: ${{ env.RELEASE_VERSION }} latest_release
+        containerfiles: ./Containerfile
+    - name: Push to repo
+      uses: redhat-actions/push-to-registry@v2
+      with:
+          username: ${{ env.REGISTRY_USER }}
+          password: ${{ env.REGISTRY_PASSWORD }}
+          registry: ${{ env.IMAGE_REGISTRY }}
+          image: ${{ env.IMAGE }}
+          tags: ${{ env.RELEASE_VERSION }} latest_release
+    - name: Print image url
+      run: echo "Image pushed to ${{ steps.push-to-repo.outputs.registry-paths }}"
+      
