--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -3,7 +3,7 @@ name: Tests suite
 on:
 release:
     types:
-      - released
+      - published
 env:
   REGISTRY_USER: c3genomics+github_pusher
   IMAGE_REGISTRY: quay.io
