test on main and dev push

--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -6,6 +6,8 @@ on:
         branches: ['main', 'dev']
     push:
         tags: '[0-9]+.[0-9]+.[0-9]+'
+    push:
+        branches: ['main', 'dev']
 
 env:
     REGISTRY_USER: c3genomics+github_pusher
