--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,8 @@ dependencies = [
     "flask>=2.2.2",
     "sqlalchemy>=2.0.25",
     "alembic>=1.13.1",
+    "alembic-utils",
+    "alembic-postgresql-enum",
     "gunicorn>=20.1.0",
     "sqlalchemy-json>=0.5.0"
 ]
