--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,9 +55,9 @@ postgres = [
 allow-direct-references = true
 
 [tool.pdm.version]
-# source = "file"
-# path = "project_tracking/__version__.py"
-source = "scm"
-version_format = "project_tracking.version:format_version"
-write_to = "project_tracking/__version__.py"
-write_template = "__version__ = '{}'"
+source = "file"
+path = "project_tracking/__version__.py"
+# source = "scm"
+# version_format = "project_tracking.version:format_version"
+# write_to = "project_tracking/__version__.py"
+# write_template = "__version__ = '{}'"
