--- a/.github/workflows/PyTest.yml
+++ b/.github/workflows/PyTest.yml
@@ -21,6 +21,9 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
+    - name: Install project
+      run: |
+        pdm install --prod --no-lock --no-editable
     - name: Run Tests
       run: |
         pdm run -v pytest tests
