--- a/.github/workflows/PyTest.yml
+++ b/.github/workflows/PyTest.yml
@@ -20,11 +20,14 @@ jobs:
       uses: pdm-project/setup-pdm@v4.1
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Sourcing venv
+      run: |
+        $(pdm venv activate
 
     - name: Install pip, pytest and flake8
       run: |
         python -m ensurepip --upgrade
-        pip3 install --upgrade pip
+        pip install --upgrade pip
         pip install flake8 pytest
 
     - name: Install project
