--- a/.github/workflows/PyTest.yml
+++ b/.github/workflows/PyTest.yml
@@ -20,33 +20,32 @@ jobs:
       uses: pdm-project/setup-pdm@v4.1
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Setup upterm session
-      uses: lhotari/action-upterm@v1
+        python-path: ${{ runner.tool_cache }}/Python/${{ matrix.python-version }}/x64
 
-    - name: Sourcing venv
-      run: |
-        pdm venv create
-        $(pdm venv activate)
+    # - name: Setup upterm session
+    #   uses: lhotari/action-upterm@v1
 
-    - name: Install pip, pytest and flake8
+    - name: Install dependencies
       run: |
-        python -m ensurepip --upgrade
+        pdm install --prod --frozen-lockfile --no-editable
         pip install --upgrade pip
         pip install flake8 pytest
 
-    - name: Install project
-      run: |
-        pdm install --prod --frozen-lockfile --no-editable
-
     - name: Run Tests
       run: |
+        source $(pdm venv activate)
         pdm run -v pytest tests
 
     - name: Lint with flake8
       run: |
-          # stop the build if there are Python syntax errors or undefined names
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-            # exit-zero treats all errors as warnings. The GitHub editor is
-            # 127 chars wide
-          flake8 . --count --exit-zero --max-complexity=10 \
-          --max-line-length=127 --statistics
+        source $(pdm venv activate)
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
+    - name: Cache PDM packages
+      uses: actions/cache@v3
+      with:
+        path: ~/.pdm/cache
+        key: ${{ runner.os }}-pdm-${{ hashFiles('pdm.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-pdm-
