--- a/.github/workflows/PyTest.yml
+++ b/.github/workflows/PyTest.yml
@@ -27,13 +27,9 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pdm install --prod --frozen-lockfile --no-editable
-        pip install --upgrade pip
-        pip install flake8 pytest
-
+        pdm sync -d -G testing
     - name: Run Tests
       run: |
-        source $(pdm venv activate)
         pdm run -v pytest tests
 
     - name: Lint with flake8
