--- a/.github/workflows/PyTest.yml
+++ b/.github/workflows/PyTest.yml
@@ -37,8 +37,8 @@ jobs:
     - name: Lint with flake8
       run: |
         source $(pdm venv activate)
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        pdm run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        pdm run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
     - name: Cache PDM packages
       uses: actions/cache@v3
