--- a/.github/workflows/PyTest.yml
+++ b/.github/workflows/PyTest.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.11", "3.12", "3.13"]
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, fedora-latest]
     steps:
     - uses: actions/checkout@v4
     - name: Set up PDM
