--- a/.github/workflows/Tag-and-Release.yml
+++ b/.github/workflows/Tag-and-Release.yml
@@ -28,14 +28,17 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Setup Git
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
+
       - name: Setup PDM
-        uses: pdm-project/setup-pdm@v4.1
+        uses: pdm-project/setup-pdm@v4
         with:
           python-version: '3.x'
+
       - name: Get tag
         id: get_tag
         run: |
@@ -43,37 +46,44 @@ jobs:
           git pull
           pdm install --prod --no-lock --no-editable
           echo "version=$(pdm show --version)" >> $GITHUB_OUTPUT
+
       - name: Tag the commit
         run: |
           next_version=${{ steps.get_tag.outputs.version }}
           git tag -a "$next_version" -m "Version $next_version"
           git push --follow-tags
+
       - name: Create changelog diff
         id: changelog_diff
         run: |
           sed -n '/#### \[${{ steps.get_tag.outputs.version }}\]/,/^#### /p' CHANGELOG.md | sed '$d' > release_notes.md
+
       - name: Update package lists
         run: sudo apt-get update
+
       - name: Install QEMU
-        run: sudo apt-get install --fix-missing qemu-user-static
-      - name: Build Container Image
-        uses: redhat-actions/buildah-build@v2
-        with:
-          image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: ${{ steps.get_tag.outputs.version }} latest
-          containerfiles: ./Containerfile
-          archs: amd64,arm64
-      - name: Push to repo
-        uses: redhat-actions/push-to-registry@v2
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker registry
+        uses: docker/login-action@v3
         with:
           username: ${{ env.REGISTRY_USER }}
           password: ${{ env.REGISTRY_PASSWORD }}
-          registry: ${{ env.REGISTRY }}
-          image: ${{ env.IMAGE_NAME }}
-          tags: ${{ steps.get_tag.outputs.version }} latest
+
+      - name: Build and push multi-architecture image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.get_tag.outputs.version }},${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          platforms: linux/amd64,linux/arm64
+
       - name: Create release
         id: create_release
-        uses: softprops/action-gh-release@v2.1.0
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ steps.get_tag.outputs.version }}
           name: Release ${{ steps.get_tag.outputs.version }}
@@ -82,5 +92,6 @@ jobs:
           prerelease: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Delete release_notes file
         run: rm release_notes.md
