--- a/.github/workflows/PyTest.yml
+++ b/.github/workflows/PyTest.yml
@@ -24,8 +24,13 @@ jobs:
     - name: Install dependencies
       run: |
         pdm install -d -G testing
-        pdm add pytest
+        pdm add pytest flake8
 
     - name: Run Tests
       run: |
         pdm run -v pytest tests
+
+    - name: Lint with flake8
+      run: |
+        pdm run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics --exclude=./.venv/lib/python${{ matrix.python-version }}/site-packages/werkzeug/routing/matcher.py
+        pdm run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics --exclude=./.venv/lib/python${{ matrix.python-version }}/site-packages/werkzeug/routing/matcher.py
