--- a/.github/workflows/Tag-and-Release.yml
+++ b/.github/workflows/Tag-and-Release.yml
@@ -70,6 +70,7 @@ jobs:
       - name: Login to Docker registry
         uses: docker/login-action@v3
         with:
+          registry: ghcr.io
           username: ${{ env.REGISTRY_USER }}
           password: ${{ env.REGISTRY_PASSWORD }}
 
