--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,8 +34,7 @@ dependencies = [
     "alembic>=1.13.1",
     "alembic-utils",
     "alembic-postgresql-enum",
-    "gunicorn>=20.1.0",
-    "sqlalchemy-json>=0.5.0"
+    "gunicorn>=20.1.0"
 ]
 
 [project.urls]
