--- a/.github/workflows/PyTest.yml
+++ b/.github/workflows/PyTest.yml
@@ -32,5 +32,5 @@ jobs:
 
     - name: Lint with flake8
       run: |
-        pdm run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics --exclude=./.venv/lib/python${{ matrix.python-version }}/site-packages/werkzeug/routing/matcher.py
-        pdm run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics --exclude=./.venv/lib/python${{ matrix.python-version }}/site-packages/werkzeug/routing/matcher.py
+        pdm run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics --exclude=.venv
+        pdm run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics --exclude=.venv
