--- a/.github/workflows/Tag-and-Release.yml
+++ b/.github/workflows/Tag-and-Release.yml
@@ -80,7 +80,11 @@ jobs:
           context: .
           file: ./Containerfile
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.get_tag.outputs.version }},${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          sbom: true
+          provenance: true
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.get_tag.outputs.version }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
           platforms: linux/amd64,linux/arm64
 
       - name: Create release
