--- a/.github/workflows/Dev-Container-Publish.yaml
+++ b/.github/workflows/Dev-Container-Publish.yaml
@@ -5,17 +5,9 @@ on:
     branches:
       - dev
 
-env:
-  REGISTRY: ghcr.io
-  REGISTRY_USER: ${{ github.actor }}
-  REGISTRY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
-  IMAGE_NAME: ${{ github.repository }}
-
 jobs:
   publish-dev:
     runs-on: ubuntu-latest
-
-    # Sets the permissions granted to the `GITHUB_TOKEN` for the actions in this job.
     permissions:
       contents: write
       packages: write
@@ -34,33 +26,16 @@ jobs:
       - name: Install dependencies
         run: pdm install --prod --no-lock --no-editable
 
-      - name: Update package lists
-        run: sudo apt-get update
-
-      - name: Install QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Docker registry
-        uses: docker/login-action@v3
-        with:
-          username: ${{ env.REGISTRY_USER }}
-          password: ${{ env.REGISTRY_PASSWORD }}
-
       - name: Get short SHA
         id: vars
         run: echo "short_sha=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
 
-      - name: Build and push dev image
-        uses: docker/build-push-action@v6
+      - name: Call reusable Docker publish workflow
+        uses: ./.github/workflows/reusable-docker-publish.yml
         with:
-          context: .
-          push: true
-          sbom: true
-          provenance: true
+          image_name: ${{ github.repository }}
           tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:dev
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:dev-${{ steps.vars.outputs.short_sha }}
-          platforms: linux/amd64,linux/arm64
+            ghcr.io/${{ github.repository }}:dev
+            ghcr.io/${{ github.repository }}:dev-${{ steps.vars.outputs.short_sha }}
+        secrets:
+          token: ${{ secrets.GITHUB_TOKEN }}
